--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,10 @@
 <p>Meet us at the <%= link_to "first group meeting this Saturday Mar 9th, 2013.", "http://gathers.us/events/first-ever-mysore-ruby-user-group-meeting" %></p>
 
 <font size="10">A BRAND NEW WEBSITE COMING SOON</font>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<font size="4">Code at <%= link_to "Github", "https://github.com/prakashmurthy/mysore_ruby" %></font>
