Changed the message on the welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
 <h2>Mysore Ruby User Group</h2>
 
-<p>Meet us at the <%= link_to "first group meeting this Saturday Mar 9th, 2013.", "http://gathers.us/events/first-ever-mysore-ruby-user-group-meeting" %></p>
+<p>Meet us at the <%= link_to "first group meeting this Saturday Mar 9th, 2013", "http://gathers.us/events/first-ever-mysore-ruby-user-group-meeting" %></p>
 
-<font size="10">A BRAND NEW WEBSITE COMING SOON</font>
+<font size="10">AND BUILD A GOOD WEBSITE FOR THE GROUP!</font>
 <br/>
 <br/>
 <br/>
