Updated the site after first meeting

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,17 @@
 <h2>Mysore Ruby User Group</h2>
 
-<p>Meet us at the <%= link_to "first group meeting this Saturday Mar 9th, 2013", "http://gathers.us/events/first-ever-mysore-ruby-user-group-meeting" %></p>
-
-<font size="10">AND BUILD A GOOD WEBSITE FOR THE GROUP!</font>
+<h3>Upcoming meetings</h3>
+<p>Hacking on the mysoreruby.org website - Sat Mar 23</p>
+<p>Mysore RUG April 2013 Meeting - Sat Apr 13</p>
+<h3>Past meetings</h3>
+<%= image_tag("first_meetup.jpg", :size => "800x600",:alt => "Pic from the first meetup") %>
+<p><%= link_to "First group meeting Saturday Mar 9th, 2013", "http://gathers.us/events/first-ever-mysore-ruby-user-group-meeting" %></p>
+<br/>
+<font size="4"><%= link_to "Google Group mailing list", "https://groups.google.com/group/mysore-rb" %></font>
 <br/>
 <br/>
 <br/>
 <br/>
 <br/>
 <br/>
-<font size="4">Code at <%= link_to "Github", "https://github.com/prakashmurthy/mysore_ruby" %></font>
+<font size="2"><%= link_to "Code for the web-site at Github", "https://github.com/prakashmurthy/mysore_ruby" %></font>
