Added link for upcoming meeting on ruby koans

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Mysore Ruby User Group</h2>
 
 <h3>Upcoming meetings</h3>
-<p>Hacking on the mysoreruby.org website - Sat Mar 23</p>
+<p><%= link_to "Learn ruby through RubyKoans - Sat Mar 23", "http://gathers.us/events/mysore-rug-learn-ruby-through-rubykoans" %></p>
 <p>Mysore RUG April 2013 Meeting - Sat Apr 13</p>
 <h3>Past meetings</h3>
 <%= image_tag("first_meetup.jpg", :size => "800x600",:alt => "Pic from the first meetup") %>
