--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,24 +12,31 @@
  *= require_tree .
  */
 body {
-  text-align: center;
-  margin: 0;
+  width: 900px;
   font-family: "Helvetica Neue", Arial;
-  font-size: 18px;
-  line-height: 1.4
+  margin: 12px;
 }
 
 h1, h2, h3 {
+  text-align: left;
   font-family: "PT Sans";
   font-weight: bold;
-  letter-spacing: -1px
+  margin: 30px 0 5px 0;
 }
 
 h2 {
   text-align: center;
   font-size: 35px;
   border-top: 1px solid silver;
+  border-bottom: 1px solid silver;
   margin: 40px 0 30px 0;
-  padding-top: 40px;
-  clear: both
+  padding: 30px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+p {
+  margin: 8px;
 }
