WIP - adding link to CPR document

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -32,3 +32,8 @@
 
 %p
   = link_to "Github Repository", "https://github.com/mysore-ruby/mysore-ruby"
+
+%h3 Context, Purpose, and Results
+
+%p
+  = link_to "Context, Purpose, and Results", "http://dl.dropboxusercontent.com/u/3554509/vision_stmnt_mysore_ruby.pdf"
