--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,10 +3,14 @@
 %h3 Upcoming Meetings
 
 %p
-  = link_to "Open Hack Mysore Edition - Sat Apr 20",
-    "http://gathers.us/events/open-hack-mysore-edition-apr-2013"
+  = link_to "Mysore RUG May 2013 meeting - Sat May 11",
+    "http://gathers.us/events/mrug-summer-meetup"
 
 %h3 Past meetings
+
+%p
+  = link_to "Open Hack Mysore Edition - Sat Apr 20",
+    "http://gathers.us/events/open-hack-mysore-edition-apr-2013"
 
 %p Mysore RUG April 2013 Meeting - Sat Apr 13</p>
 
