Added info about rails workshop

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,10 +3,18 @@
 %h3 Upcoming Meetings
 
 %p
-  = link_to "Mysore RUG June 2013 meeting - Sat Jun 08",
-    "http://gathers.us/events/mrug-june-meetup"
+  = link_to "Hands-on introduction to Ruby on Rails - Jun 13-14, 2013",
+    "http://gathers.us/events/hands-on-introduction-to-ruby-on-rails"
 
 %h3 Past meetings
+
+%p
+  = link_to "Mysore RUG June 2013 meeting #2 - Sat Jun 29",
+    "http://gathers.us/events/mrug-june-meetup-807ff"
+
+%p
+  = link_to "Mysore RUG June 2013 meeting - Sat Jun 08",
+    "http://gathers.us/events/mrug-june-meetup"
 
 %p
   = link_to "Mysore RUG May 2013 meeting - Sat May 11",
